--- a/codeception.yml
+++ b/codeception.yml
@@ -16,7 +16,7 @@ extensions:
         - Codeception\Extension\Phantoman
     config:
         Codeception\Extension\Phantoman:
-            path: '/usr/bin/phantomjs'
+            path: 'node_modules/.bin/phantomjs'
             suites: ['acceptance']
 modules:
     config:
